Working on Raspberry Pi (configure sensor details as required)

--- a/src/main/resources/OSGI-INF/l10n/bundle.properties
+++ b/src/main/resources/OSGI-INF/l10n/bundle.properties
@@ -20,3 +20,10 @@ dataSubscription.description=Default subscriptions with this Sample Adapter. The
 
 adapterSensors.name=Sensors
 adapterSensors.description=List of sensors to be published by this adapter
+
+adapterSensorW1Location.name=Sensor W1 Location
+adapterSensorW1Location.description=Location of W1 sensor data
+
+adapterSensorW1Filename.name=Sensor W1 Filename
+adapterSensorW1Filename.description=Filename containing W1 sensor data
+ 
